[gd_scene load_steps=4 format=3 uid="uid://c1x74ucugya7x"]

[ext_resource type="Texture2D" uid="uid://vhsv0qfs778j" path="res://bigtent-96x96.png" id="1_d0xsi"]
[ext_resource type="Script" path="res://Container.gd" id="1_ko1yj"]
[ext_resource type="Script" path="res://Sprite2D.gd" id="3_tdexj"]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="Container" type="Node2D" parent="Node2D"]
script = ExtResource( "1_ko1yj" )

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Container"]
texture_filter = 1
position = Vector2(200, 200)
scale = Vector2(4, 4)
texture = ExtResource( "1_d0xsi" )
script = ExtResource( "3_tdexj" )

[node name="Area2D" type="Area2D" parent="Node2D/Container"]
position = Vector2(200, 200)
scale = Vector2(4, 4)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Container/Area2D"]
polygon = PackedVector2Array(0, -25, 34, 0, 26, 34, -26, 34, -36, 0)

[connection signal="input_event" from="Node2D/Container/Area2D" to="Node2D/Container" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Node2D/Container/Area2D" to="Node2D/Container" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Container/Area2D" to="Node2D/Container" method="_on_area_2d_mouse_exited"]
